# PDS_2026

./: .cursorignore  .env.example  .gitignore  GITHUB.md  GUIA_APLICACION_CLIENTE.md  INSTALL.md  LICENSE  PDS_2026.bat  PDS_2026.ps1  README.md  pyproject.toml  requirements-pinned.txt  requirements.txt
.cursor/rules/: economy.mdc
.github/workflows/: test.yml
config/clients/: galicia.yaml  hackathon.yaml
entrada_canonica/: PDS_FINANCE.xlsx  PDS_GESTION.xlsx  PDS_INGESTA_DEMO.xlsx  PDS_PERMITS.xlsx  PDS_SOURCING.xlsx
modulos_legacy/: 01_append_master.py
pds_core/: __init__.py
pds_core/config/: __init__.py  config_loader.py  loader.py  loader_columnas_simple.py  validator.py
pds_core/ingestion/: __init__.py  base.py  manager.py
pds_core/integration/: __init__.py  storage.py
pds_core/pipeline/: __init__.py  config_pipeline.py  executor.py  exports.py  state.py  steps.py
pds_core/rules/: manager.py  yaml_engine.py
pds_core/utils/: dates.py  excel_generator_simple.py  excel_io.py
scripts/: gen_pipeline_modules.py  generar_plantilla_excel.py  ingestar.py  run_pipeline.py  seed_demo.py  setup_cliente.py  validar_cliente.py
src/: config_loader.py  run_pipeline.py
src/pipeline/: 01_append_master.py  02_enrich_procurement.py  03_enrich_permits.py  04_enrich_finance.py  05_enrich_external_sources.py  06_build_portfolio.py  07_traffic_lights.py  08_milestones.py  09_forecast.py  10_risk_engine.py  11_alerts.py  12_kpi.py  13_dashboard.py  14_gantt.py  15_project_card.py  16_export_html.py  17_export_csv.py  18_export_pbi.py  (+4 more)
tests/: conftest.py
(+45 files in other folders)
